--- a/www/admin/views/login.html
+++ b/www/admin/views/login.html
@@ -1,5 +1,5 @@
-<div class="full-height" md-colors="{background: 'grey-800'}">
-    <div class="flex-center-center">
+<div class="full-height"layout="row" layout-padding layout-align="center center" md-colors="{background: 'grey-800'}">
+    <div flex-xs="100" flex-sm="50" flex-md="40" flex-gt-md="30">
         <form name="loginForm" ng-submit="vm.login()">
             <md-card id="loginCard" md-colors="{background: 'orange-A200', color: 'grey-800'}">
                 <md-card-title>
@@ -29,7 +29,5 @@
                 </md-card-actions>
             </md-card>
         </form>
-            
-            
     </div>
 </div>
