--- a/www/admin/views/places.html
+++ b/www/admin/views/places.html
@@ -1,45 +1,50 @@
-<md-content>
-    <md-card>
-        <md-toolbar class="md-table-toolbar">
-            <div class="md-toolbar-tools">
-                <span>Places</span>
-            </div>
-        </md-toolbar>
-        <!-- exact table from live demo -->
-        <md-table-container>
-            <table md-table>
-                <thead md-head>
-                <tr md-row>
-                    <th md-column><div ng-click="vm.sortBy('name')" class="table-header">Name</div>
-                    <input type="text" ng-model="vm.filter.name" class="table-filter"></th>
-                    <th md-column ><div ng-click="vm.sortBy('type')" class="table-header">Type</div>
-                    <input type="text" ng-model="vm.filter.type" class="table-filter"></th>
-                    <th md-column><div ng-click="vm.sortBy('address')" class="table-header">Address</div>
-                    <input type="text"ng-model="vm.filter.address" class="table-filter"></th>
-                    <th md-column ></th>
-                </tr>
-                </thead>
-                <tbody md-body>
-                <tr md-row ng-repeat="place in vm.items | orderBy:vm.propertyName:vm.reverse | filter:vm.filter">
-                    <td md-cell >{{place.name}}</td>
-                    <td md-cell >{{place.type}}</td>
-                    <td md-cell >{{place.address}}</td>
-                    <td md-cell>
-                    <md-button class="md-icon-button fa-ng-size" aria-label="Edit" ng-click="vm.showUpdateDialog($event, place)">
-                        <md-icon md-font-icon="fa-edit" class="fa fa-ng"></md-icon>
-                    </md-button>
-                    <md-button class="md-icon-button" aria-label="Delete" ng-click="vm.showDeleteDialog($event, place)">
-                        <md-icon md-font-icon="fa-times" class="fa fa-ng"></md-icon>
-                    </md-button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </md-table-container>
-    </md-card>
-   
+<md-content layout-margin>
+    <div layout="row" layout-align="center">
+        <div flex="90" flex-xs="100">
+            <md-card>
+                <md-toolbar class="md-table-toolbar">
+                    <div class="md-toolbar-tools">
+                        <span>Places</span>
+                    </div>
+                </md-toolbar>
+                <!-- exact table from live demo -->
+                <md-table-container>
+                    <table md-table>
+                        <thead md-head>
+                        <tr md-row>
+                            <th md-column><div ng-click="vm.sortBy('name')" class="table-header">Name</div>
+                            <input type="text" ng-model="vm.filter.name" class="table-filter"></th>
+                            <th md-column ><div ng-click="vm.sortBy('type')" class="table-header">Type</div>
+                            <input type="text" ng-model="vm.filter.type" class="table-filter"></th>
+                            <th md-column><div ng-click="vm.sortBy('address')" class="table-header">Address</div>
+                            <input type="text"ng-model="vm.filter.address" class="table-filter"></th>
+                            <th md-column ></th>
+                        </tr>
+                        </thead>
+                        <tbody md-body>
+                        <tr md-row ng-repeat="place in vm.items | orderBy:vm.propertyName:vm.reverse | filter:vm.filter">
+                            <td md-cell >{{place.name}}</td>
+                            <td md-cell >{{place.type}}</td>
+                            <td md-cell >{{place.address}}</td>
+                            <td md-cell>
+                            <md-button class="md-icon-button fa-ng-size" aria-label="Edit" ng-click="vm.showUpdateDialog($event, place)">
+                                <md-icon md-font-icon="fa-edit" class="fa fa-ng"></md-icon>
+                            </md-button>
+                            <md-button class="md-icon-button" aria-label="Delete" ng-click="vm.showDeleteDialog($event, place)">
+                                <md-icon md-font-icon="fa-times" class="fa fa-ng"></md-icon>
+                            </md-button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </md-table-container>
+            </md-card>
+        </div>    
+    </div>
 </md-content>
-
 <md-button class="md-fab md-fab-bottom-right"  aria-label="Add_Place" ng-click="vm.showCreateDialog($event)">
     <md-icon md-font-icon="fa-plus" class="fa fa-ng"></md-icon>
 </md-button>
+
+   
+    
